...
        <variable
            name="mapModel"
            type="com.rideaustin.ui.map.MapViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapContainer"
        style="@style/RelativeLayout.Base"
        android:animateLayoutChanges="true">

        <com.rideaustin.utils.TouchWrapper
            android:id="@+id/map"
            android:layout_width="match_parent"
...
            android:orientation="vertical"
            android:alpha="@{mapModel.controlsAlpha}"
            android:visibility="@{mapModel.googleServicesEnabled}"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/unmet_requirement"
                style="@style/RATextView.PaymentRequire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@{mapModel.unmetRequirement}"
                android:visibility="@{mapModel.hasUnmetRequirement}"
...
